--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "supertest": "^6.1.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
-    "ts-sinon": "^2.0.1"
+    "ts-sinon": "^2.0.1",
+    "tslint": "^6.1.3"
   }
 }
