--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=windows mocha -r ts-node/register test/**/*.spec.ts",
     "test-dev": "cross-env NODE_ENV=windows nodemon -L --watch . --ext ts --exec \"mocha --timeout '60000' -r ts-node/register test/**/*.spec.ts\"",
     "config-test-dev": "cp -R lib/views dist && cp -R public dist/public && DEBUG=bajs NODE_ENV=test nodemon --watch . --ext ts --exec \"env-cmd -f ./config/.env  mocha -r ts-node/register test/**/*.spec.ts\"",
-    "build": "tsc && cp ../config/cert.pem config/serverCert.pem",
+    "build": "tsc && cp ./config/cert.pem config/serverCert.pem",
     "dev": "ts-node ./lib/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start",
@@ -30,6 +30,7 @@
     "guid-typescript": "^1.0.9",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.22.2",
     "mongoose": "^5.13.5",
     "mqtt": "^3.0.0",
