--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "auto": "./node_modules/nodemon/bin/nodemon.js",
-    "test": "cross-env NODE_ENV=windows mocha -r ts-node/register test/**/*.spec.ts",
+    "test": "cross-env NODE_ENV=windows mocha -exit --timeout '60000' -r ts-node/register test/**/*.spec.ts",
     "test-dev": "cross-env NODE_ENV=windows nodemon -L --watch . --ext ts --exec \"mocha --timeout '60000' -r ts-node/register test/**/*.spec.ts\"",
     "config-test-dev": "cp -R lib/views dist && cp -R public dist/public && DEBUG=bajs NODE_ENV=test nodemon --watch . --ext ts --exec \"env-cmd -f ./config/.env  mocha -r ts-node/register test/**/*.spec.ts\"",
     "build": "tsc && cp ./config/cert.pem config/serverCert.pem",
