--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "fs": "0.0.1-security",
     "guid-typescript": "^1.0.9",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.22.2",
     "mongoose": "^5.13.5",
-    "mqtt": "^3.0.0",
-    "node-config-ts": "^1.3.1",
+    "mqtt": "^4.2.8",
+    "node-config-ts": "^3.1.0",
     "node-forge": "^0.10.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
@@ -57,7 +58,7 @@
     "chai": "^4.2.0",
     "chai-spy": "0.0.1",
     "mocha": "^8.2.1",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.12",
     "supertest": "^6.1.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.8",
